Fix some dark mode colours

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -58,7 +58,7 @@ a {
 
   &:hover,
   &:focus {
-    @apply text-indigo-800;
+    @apply text-indigo-400;
   }
 }
 
